fixed the backface-visibility bug and made cards tabbable

--- a/partials/_global.scss
+++ b/partials/_global.scss
@@ -3,7 +3,6 @@ html {
 
     .wrapper {
         max-width: 800px;
-        padding: 0 30px;
         margin: 0 auto;
         width: 50%;
 
