--- a/partials/_mixin.scss
+++ b/partials/_mixin.scss
@@ -1,15 +1,13 @@
 @mixin button () {
-    button {
         font-family: 'Cabin Sketch', cursive;
         font-size: 2.5rem;
         border: none;
-        padding: 12px 6%;
         border-radius: 50px;
-        margin: 0 0 30px;
         box-shadow: 5px 5px 0 blue;
         transition: all 0.5s;
         background: white;
         z-index: 999;
+        width: 20%;
 
         &:focus,
         &:active,
@@ -17,7 +15,6 @@
             transform: translate(2.5px, 2.5px);
             box-shadow: 2.5px 2.5px blue;
         }
-    }
 }
 
 @mixin mq-1024 {
@@ -28,12 +25,6 @@
 
 @mixin mq-768 {
     @media(max-width: 768px) {
-        @content;
-    }
-}
-
-@mixin mq-650 {
-    @media(max-width: 650px) {
         @content;
     }
 }
